objects/TriggerDisabled__mdt.object
<CustomObject>
    <description>Custom metadata to be used to disable a method in a trigger</description>
    <fields>
        <fullName>MethodName__c</fullName>
        <description>Custom Field to enter the name of the method which needs to be disabled</description>
        <inlineHelpText>Enter the method name to disable</inlineHelpText>
        <label>Method Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerName__c</fullName>
        <label>Trigger Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Credential__c</fullName>
                </value>
                <value>
                    <fullName>SkillTags__c</fullName>
                </value>
                <value>
                    <fullName>WorkExperience__c</fullName>
                </value>
                <value>
                    <fullName>Project__c</fullName>
                </value>
                <value>
                    <fullName>ContentDocument</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>PeopleProfileReferenceData__c</fullName>
                </value>
                <value>
                    <fullName>CICD_ReleaseTriggerHandler</fullName>
                </value>
                <value>
                    <fullName>MasterCaseTrigger__c</fullName>
                    <isActive>false</isActive>
                    <label>MasterCaseTrigger__c</label>
                </value>
                <value>
                    <fullName>OpportunityContacts__c</fullName>
                    <isActive>false</isActive>
                    <label>OpportunityContacts__c</label>
                </value>
                <value>
                    <fullName>TransactionControl__c</fullName>
                    <isActive>false</isActive>
                    <label>TransactionControl__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean field to indicate whether the method is disabled or not</description>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerDisabled</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>MethodName__c</columns>
        <columns>TriggerName__c</columns>
        <columns>DeveloperName</columns>
        <columns>isDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>TriggerDisabled</pluralLabel>
</CustomObject>